Add 2 new recipes and correct typos
Added eggsandrice and italianovendish to available recipes and corrected typos on  all pages.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -21,12 +21,12 @@
     </ul>
     <h2>Steps</h2>
     <lo>
-        <li>cook the meat and add spices as needed</li>
-        <li>cut the garlic and union and add with the meat</li>
-        <li>take a big bowl and layer the meat, sauce and sheets</li>
-        <li>make 2 layers and on top of the last sheets add the rest of the tomato sauce</li>
-        <li>now add the cheese and put in the oven on 200 degreees</li>
-        <li>when the cheese is brown take the meal out of the oven and enjoy</li>
+        <li>Cook the meat and add spices as needed</li>
+        <li>Cut the garlic and union and add with the meat</li>
+        <li>Take a big bowl and layer the meat, sauce and sheets</li>
+        <li>Make 2 layers and on top of the last sheets add the rest of the tomato sauce</li>
+        <li>Now add the cheese and put in the oven on 200 degreees</li>
+        <li>When the cheese is brown take the meal out of the oven and enjoy</li>
     </lo>
 
     <p><a href="../index.html">Home</a></p>
