--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Odin recipes</title>
+    <title>Home</title>
 </head>
 <body>
     <h1>odin-recipes</h1>
-    <a href="recipes/lasagna.html">lasagna</a>
+    <lu>
+    <li><a href="recipes/lasagna.html">lasagna</a></li>
+    <li><a href="recipes/eggsandrice.html">Eggs and rice</a></li>
+    <li><a href="recipes/italianovendish.html">Italian ovendish</a></li>
+    </lu>
+
 </body>
 </html>
