--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>odin-recipes</h1>
-    <lu>
-    <li><a href="recipes/lasagna.html">lasagna</a></li>
-    <li><a href="recipes/eggsandrice.html">Eggs and rice</a></li>
-    <li><a href="recipes/italianovendish.html">Italian ovendish</a></li>
-    </lu>
+    <ul class="recipelist">
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/eggsandrice.html">Eggs and rice</a></li>
+        <li><a href="recipes/italianovendish.html">Italian ovendish</a></li>
+    </ul>
 
 </body>
 </html>
